listing, table, semantic, yt, font-awesome, git push done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I am practicing</title>
+    <script src="https://kit.fontawesome.com/adc35f63b8.js" crossorigin="anonymous"></script>
+    <style>
+        body{
+            background-color: rgb(1, 8, 26);
+            color: rgb(224, 58, 58);
+        }
+        th, td{
+            border: 1px solid yellow;
+        }
+        table{
+            border-collapse: collapse;
+        }
+        .fab{
+            font-size: 30px;
+            color: yellowgreen;
+        }
+    </style>
 </head>
 <body>
-    
+    <section class="list">
+        <p>List of inline elemnts</p>
+        <ol>
+            <li>img Tag</li>
+            <li>I Tag</li>
+            <li>sub Tag</li>
+            <li>sup Tag</li>
+            <li>label Tag</li>
+            <li>Anchor Tag</li>
+            <li>Span Tag</li>
+            <li>Small Tag</li>
+            <li>Button Tag</li>
+            <li>B Tag</li>
+        </ol>
+        <p>List of seven block elements</p>
+        <ol>
+            <li>Heading tags</li>
+            <li>Paragraph Tag</li>
+            <li>div</li>
+            <li>address Tag</li>
+            <li>Article Tag</li>
+            <li>section Tag</li>
+            <li>main Tag</li>
+        </ol>
+        <p>List of two defalut inline-block elements</p>
+        <ol>
+            <li>input</li>
+            <li>Text Area</li>
+        </ol>
+    </section>
+    <section class="table">
+        <table>
+            <caption>My Friend List</caption>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Living Place</th>
+                    <th>BirthDate</th>
+                    <th>Restuarent Name</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Rad</td>
+                    <td>Thana Para</td>
+                    <td>8 November</td>
+                    <td>Dhaka Biriyani House</td>
+                </tr>
+                <tr>
+                    <td>Samudro</td>
+                    <td>Post Office Para</td>
+                    <td>29 August</td>
+                    <td>Nanna Biriyani House</td>
+                </tr>
+                <tr>
+                    <td>Dipto</td>
+                    <td>Jalil Birir More</td>
+                    <td>16 March</td>
+                    <td>Ruposhi Bangla</td>
+                </tr>
+                <tr>
+                    <td>Maruf</td>
+                    <td>Saddir More</td>
+                    <td>31 February</td>
+                    <td>Kacha Lanka</td>
+                </tr>
+                <tr>
+                    <td>Osama</td>
+                    <td>PolashBari</td>
+                    <td>29 June</td>
+                    <td>Alomer Hotel</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+    <section class="semantic">
+        <h3>What is "Semantic Tags"</h3>
+        <p>Semantic tags are those tags which's name can be easily understood by hhumna being! And also we ca understand their purpose by their name. These names helps people to understand their purpose.</p>
+        <ul>
+            <li>header</li>
+            <li>main</li>
+            <li>aside</li>
+            <li>section</li>
+            <li>footer</li>
+            <li>nav</li>
+            <li>article</li>
+            <li>form</li>
+            <li>table</li>
+        </ul>
+    </section>
+    <!-- <section class="yt-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Tn6dNMl-h8E?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+    </section>
+    <section class="icons">
+        <a href="https://www.facebook.com/marzan.bin.rahman07" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.youtube.com/channel/UCdC58Fno7uiux5-fDWb3F4Q" target="_blank"><i class="fab fa-youtube"></i></a>
+    </section>
 </body>
 </html>
